Task on branches OFJ-565 Stop objects from being passed to view scripts A-M
Converted objects from Mail library function to arrays before being assigned to its view script.
Append the missed finding template.xls view script files in the commit.

--- a/application/views/scripts/mail/notification.phtml
+++ b/application/views/scripts/mail/notification.phtml
@@ -7,8 +7,8 @@ to modify your notification preferences, please log in to the system and select
 foreach ( $this->notifyData as $row ) { 
 ?>
 ---------------------------------------
-Event: <?php echo "{$row->eventText}\n"; ?>
-Time:  <?php echo "{$row->createdTs}\n"; ?>
+Event: <?php echo "{$row['eventText']}\n"; ?>
+Time:  <?php echo "{$row['createdTs']}\n"; ?>
 <?php 
 } 
 ?>
