--- a/application/views/scripts/mail/sendaccountinfo.phtml
+++ b/application/views/scripts/mail/sendaccountinfo.phtml
@@ -1,12 +1,12 @@
 This is an automatically generated message, please do not reply to this address.
 
-Your <?php echo Fisma::configuration()->getConfig('system_name'); ?> account has been created.
+Your <?php echo $this->systemName; ?> account has been created.
 
-Login: <?php echo "{$this->user->username}\n"; ?>
-<?php if (Fisma::configuration()->getConfig('auth_type') == 'ldap'): ?>
+Login: <?php echo "{$this->username}\n"; ?>
+<?php if ($this->authType == 'ldap'): ?>
 Password: <Same as your network password>
 <?php else: ?>
-Temporary Password: <?php echo "{$this->user->plainTextPassword}\n"; ?>
+Temporary Password: <?php echo "{$this->plainTextPassword}\n"; ?>
 <?php endif; ?>
 
 Please click here to confirm this e-mail address: <?php echo $this->validationLink; ?>
