--- a/application/views/scripts/mail/sendpassword.phtml
+++ b/application/views/scripts/mail/sendpassword.phtml
@@ -1,7 +1,7 @@
 This is an automatically generated message, please do not reply to this address.
 
-You password for <?php echo Fisma::configuration()->getConfig('system_name'); ?> has been reset by an administrator.
+You password for <?php echo $this->systemName; ?> has been reset by an administrator.
 
-Temporary Password: <?php echo "{$this->user->plainTextPassword}\n"; ?>
+Temporary Password: <?php echo "{$this->plainTextPassword}\n"; ?>
 
 <?php echo $this->host;?>
