--- a/application/views/scripts/system-document/view.phtml
+++ b/application/views/scripts/system-document/view.phtml
@@ -1,7 +1,7 @@
 <?php
 echo $this->partial('system-document/searchbox.phtml');
-
-$sectionName = "{$this->document->DocumentType->name} for {$this->document->System->Organization->name}";
+$document = $this->document;
+$sectionName = "{$document['DocumentType']['name']} for {$document['System']['Organization']['name']}";
 Fisma_Format_Section::startSection($sectionName);
 ?>
     
@@ -9,42 +9,42 @@ Fisma_Format_Section::startSection($sectionName);
     <tr>
         <td>File Name:</td>
         <td>
-            <a href="/system/download-document/id/<?php echo $this->document->id ?>">
-                <?php echo $this->document->fileName; ?>
+            <a href="/system/download-document/id/<?php echo $document['id'] ?>">
+                <?php echo $document['fileName']; ?>
             </a>
         </td>
     </tr>
     <tr>
         <td>Creation Date:</td>
-        <td><?php echo $this->document->createdTs; ?></td>
+        <td><?php echo $document['createdTs']; ?></td>
     </tr>
     <tr>
         <td>Last Modification Date:</td>
-        <td><?php echo $this->document->updated_at; ?></td>
+        <td><?php echo $document['updated_at']; ?></td>
     </tr>
     <tr>
         <td>Document Type:</td>
-        <td><?php echo $this->document->DocumentType->name; ?></td>
+        <td><?php echo $document['DocumentType']['name']; ?></td>
     </tr>
     <tr>
         <td>Size:</td>
-        <td><?php echo $this->document->getSizeKb(); ?></td>
+        <td><?php echo $this->fileSize; ?></td>
     </tr>
     <tr>
         <td>System:</td>
         <td>
-            <a href="/panel/system/sub/view/id/<?php echo $this->document->System->Organization->id; ?>">
-                <?php echo $this->document->System->Organization->name; ?>
+            <a href="/panel/system/sub/view/id/<?php echo $document['System']['Organization']['id']; ?>">
+                <?php echo $document['System']['Organization']['name']; ?>
             </a>
         </td>
     </tr>
     <tr>
         <td>Version:</td>
-        <td><?php echo $this->document->version; ?></td>
+        <td><?php echo $document['version']; ?></td>
     </tr>
     <tr>
         <td>Version Notes:</td>
-        <td><?php echo $this->document->description; ?></td>
+        <td><?php echo $document['description']; ?></td>
     </tr>
 </table>
 
@@ -61,12 +61,12 @@ Fisma_Format_Section::startSection($sectionName);
     <?php
         foreach ($this->versionHistory as $history) {
             echo '<tr><td>'
-               . "<a href='/system/download-document/id/$history->id/version/$history->version'>"
-               . $history->fileName
+               . "<a href='/system/download-document/id/{$history['id']}/version/{$history['version']}'>"
+               . $history['fileName']
                . '</a></td><td>'
-               . $history->version
+               . $history['version']
                . '</td><td>'
-               . $history->description
+               . $history['description']
                . '</td></tr>';
         }
     ?>
