--- a/application/views/scripts/system/artifacts.phtml
+++ b/application/views/scripts/system/artifacts.phtml
@@ -24,15 +24,15 @@ Fisma_Format_Section::startSection('System Documentation');
 <?php
 foreach ($this->documents as $document) {
     print "<tr>"
-        . "<td><a href='/system/download-document/id/{$document->id}'>"
-        . "<img src='{$document->getIconUrl()}'>"
-        . "<div>{$document->DocumentType->name}</div></a></td>"
-        . "<td>{$document->getSizeKb()}</td>"
-        . "<td align='center'>{$document->version}</td>"
-        . "<td>{$document->description}</td>"
-        . "<td>{$document->User->username}</td>"
-        . "<td>{$document->updated_at}</td>"
-        . "<td><a href='/panel/system-document/sub/view/id/$document->id'>Version History</a></td>"
+        . "<td><a href='/system/download-document/id/{$document['id']}'>"
+        . "<img src='{$document['iconUrl']}'>"
+        . "<div>{$document['fileName']}</div></a></td>"
+        . "<td>{$document['fileSize']}</td>"
+        . "<td align='center'>{$document['version']}</td>"
+        . "<td>{$document['description']}</td>"
+        . "<td>{$document['username']}</td>"
+        . "<td>{$document['updatedTs']}</td>"
+        . "<td><a href='/panel/system-document/sub/view/id/{$document['id']}'>Version History</a></td>"
         . "</tr>";
 }
 ?>
