--- a/application/views/scripts/system/system.phtml
+++ b/application/views/scripts/system/system.phtml
@@ -9,13 +9,13 @@ Fisma_Format_Section::startSection('Details');
             if ($this->updateOrganizationObjPrivilege) {
             ?>
             <span id="name" class="editable" target="name" name="name" type="text">
-                <?php echo $this->organization->name; ?>
+                <?php echo $this->organization['name']; ?>
             </span>
             <?php
             } else {
             ?>
             <span>
-                <?php echo $this->organization->name; ?>
+                <?php echo $this->organization['name']; ?>
             </span>
             <?php
             }
@@ -29,13 +29,13 @@ Fisma_Format_Section::startSection('Details');
             if ($this->updateOrganizationObjPrivilege) {
             ?>
             <span id="nickname" class="editable" target="nickname" name="nickname" type="text">
-                <?php echo $this->organization->nickname; ?>
+                <?php echo $this->organization['nickname']; ?>
             </span>
             <?php
             } else {
             ?>
             <span>
-                <?php echo $this->organization->nickname; ?>
+                <?php echo $this->organization['nickname']; ?>
             </span>
             <?php
             }
@@ -54,13 +54,13 @@ Fisma_Format_Section::startSection('Details');
                       name="type" 
                       type="select" 
                       href="/metainfo/list/o/systemType/format/html/">
-                    <?php echo $this->organization->getOrgTypeLabel(); ?>
+                    <?php echo $this->orgTypeLabel; ?>
                 </span>
             <?php
             } else {
             ?>
             <span>
-                <?php echo $this->organization->getOrgTypeLabel(); ?>
+                <?php echo $this->orgTypeLabel; ?>
             </span>
             <?php
             }
@@ -70,7 +70,34 @@ Fisma_Format_Section::startSection('Details');
     <tr>
         <td>Parent Organization: </td>
         <td>
-            <?php echo $this->parentOrganization; ?>
+            <?php
+            $parentOrganization = $this->parentOrganization;
+            if (isset($parentOrganization)):
+                if ($this->readOrganizationObjPrivilege):
+                    if ('system' == $parentOrganization['orgType']):
+                        echo "<a href='/panel/system/sub/view/id/"
+                             . $parentOrganization['id']
+                             . "'>"
+                             . $parentOrganization['nickname'] 
+                             . "-"
+                             . $parentOrganization['name']
+                             . "</a>";
+                    else:
+                        echo "<a href='/panel/organization/sub/view/id/"
+                             . $parentOrganization['id']
+                             . "'>"
+                             . $parentOrganization['nickname'] 
+                             . "-"
+                             . $parentOrganization['name']
+                             . "</a>";
+                    endif;
+                else:
+                    echo $parentOrganization['nickname'] . "-" . $parentOrganization['name'];
+                endif;
+            else:
+                echo "<i>None</i>";
+            endif;
+            ?>
         </td>
     </tr>
 </table>
@@ -84,6 +111,6 @@ if ($this->updateOrganizationObjPrivilege) {
 }
 ?>
 <div name="description" id="system_description" type="textarea" rows="3" cols="120"> 
-    <?php echo $this->organization->description; ?>
+    <?php echo $this->organization['description']; ?>
 </div>
 <?php Fisma_Format_Section::stopSection(); ?>
