--- a/application/views/scripts/system/upload-document-form.phtml
+++ b/application/views/scripts/system/upload-document-form.phtml
@@ -1,6 +1,3 @@
-<?php
-  $yuiVersion = Fisma::configuration()->getConfig('yui_version');
-?>
 <script id='uploadDocumentScript' type="text/javascript">
 var uiLayer = YAHOO.util.Dom.getRegion('selectLink');
 var overlay = YAHOO.util.Dom.get('uploaderOverlay');
@@ -8,7 +5,7 @@ YAHOO.util.Dom.setStyle(overlay, 'width', uiLayer.right-uiLayer.left + "px");
 YAHOO.util.Dom.setStyle(overlay, 'height', uiLayer.bottom-uiLayer.top + "px");
 
 // Custom URL for the uploader swf file (same folder).
-YAHOO.widget.Uploader.SWFURL = "/lib/<?php echo $yuiVersion; ?>/build/uploader/assets/uploader.swf";
+YAHOO.widget.Uploader.SWFURL = "/lib/<?php echo $this->yuiVersion; ?>/build/uploader/assets/uploader.swf";
 
 // Instantiate the uploader and write it to its placeholder div.
 
@@ -167,7 +164,7 @@ function onUploadResponse(event) {
     		    <select id="documentType">
                     <?php
                         foreach ($this->documentTypes as $documentType) {
-                            print "<option value='$documentType->id'>$documentType->name</option>";
+                            print "<option value='{$documentType['id']}'>{$documentType['name']}</option>";
                         }
                     ?>
     		    </select>    		    
