--- a/application/views/scripts/user/notification.phtml
+++ b/application/views/scripts/user/notification.phtml
@@ -53,7 +53,7 @@
             <td><b><label for="notify_frequency">Notify Frequency (hours):</label></b></td>
             <td>
                 <input name="notify_frequency" id="notify_frequency" type="text" 
-                    value="<?php echo round($this->me->notifyFrequency, 2);?>" size="30"/>
+                    value="<?php echo round($this->notifyFrequency, 2);?>" size="30"/>
             </td>
         </tr>
         <tr>
@@ -67,7 +67,7 @@
             <td><b><label for="notify_email">Notify E-mail:</label></b></td>
             <td>
                 <input name="notify_email" id="notify_email" type="text" 
-                    value="<?php echo $this->me->notifyEmail;?>" size="30" />
+                    value="<?php echo $this->notifyEmail;?>" size="30" />
             </td>
         </tr>
         <tr>
@@ -81,7 +81,7 @@
                     'multiple' => 'multiple', 
                     'size' => '20'
                 ), 
-                $this->me->getAvailableEvents()
+                $this->availableEvents
             );
             ?>
         </div>
@@ -114,7 +114,7 @@
                     'multiple' => 'multiple', 
                     'size' => '20'
                 ), 
-                $this->me->getExistEvents()
+                $this->existEvents
             );
         ?>
         </div>
