Task on the branch ofj-558: OFJ-575 Stop objects from being passed to view scripts N-Z
Fix defect OFC-48 from Crucible:
Use Zend_Json to replace json_encode() and  the _raw property of Fisma_view to obtain original view variable value.

--- a/application/views/scripts/panel/footer.phtml
+++ b/application/views/scripts/panel/footer.phtml
@@ -1,5 +1,7 @@
 <div id="footerLinks">
-    <a href="mailto:<?php echo $this->email; ?>?Subject=<?php $this->subject; ?>">Contact Administrator</a>
+    <a href="mailto:<?php echo $this->_raw['email']; ?>?Subject=<?php echo $this->_raw['subject']; ?>">
+        Contact Administrator
+    </a>
     &nbsp;|&nbsp;
     <a href="/auth/rob/">Rules of Behavior</a>&nbsp;|&nbsp;
     <a href="/auth/privacy/">Privacy Policy</a>&nbsp;|&nbsp;
