Task on the branches OFJ-565 Stop objects from being passed to view scripts A-M
Fix defect OFC-47 from Crucible:
Write DQL to replace loadReference method.
Use Zend_Json to replace json_encode().
Use echo to replace print.

--- a/application/views/scripts/auth/privacy.phtml
+++ b/application/views/scripts/auth/privacy.phtml
@@ -1,5 +1,4 @@
 <?php 
-    Fisma_Format_Section::startSection($this->systemName . ' Privacy Policy');
-    print($this->privacyPolicy);
-    Fisma_Format_Section::stopSection(); 
-?>
+Fisma_Format_Section::startSection($this->systemName . ' Privacy Policy');
+echo $this->privacyPolicy;
+Fisma_Format_Section::stopSection(); 
