--- a/application/views/scripts/auth/rob.phtml
+++ b/application/views/scripts/auth/rob.phtml
@@ -1,5 +1,4 @@
 <?php 
-
 Fisma_Format_Section::startSection($this->systemName . ' Rules of Behavior');
-print($this->behaviorRule);
+echo $this->behaviorRule;
 Fisma_Format_Section::stopSection(); 
