--- a/application/views/scripts/auth/rule.phtml
+++ b/application/views/scripts/auth/rule.phtml
@@ -9,7 +9,7 @@
 
 <?php Fisma_Format_Section::startSection($this->systemName . ' Rules of Behavior'); ?>
 <div>
-    <?php print($this->behaviorRule); ?>
+    <?php echo $this->behaviorRule; ?>
 </div>
 
 <div>
@@ -23,4 +23,3 @@
     ?>
 </div>
 <?php Fisma_Format_Section::stopSection(); ?>
-
