--- a/application/views/scripts/incident/incident.phtml
+++ b/application/views/scripts/incident/incident.phtml
@@ -226,7 +226,7 @@
                 </tr>
                 <tr>
                     <td>User:</td>
-                    <td><?php echo $this->reportingUser; ?></td>
+                    <td><?php echo $incident['reportingUser']; ?></td>
                 </tr>
             <?php
             else:
