--- a/application/views/scripts/system/artifacts.phtml
+++ b/application/views/scripts/system/artifacts.phtml
@@ -5,7 +5,7 @@ $uploadPanelButton = new Fisma_Yui_Form_Button('uploadPanelButton',
 if (!$this->updateOrganizationObjPrivilege) {
     $uploadPanelButton->readOnly = true;
 }
-print $uploadPanelButton;
+echo $uploadPanelButton;
 
 Fisma_Format_Section::startSection('System Documentation');
 ?>
