Task on branch OFJ-558 Change / standardize escaping in Views
Updated auth/login.phtml view script to use _raw for the Use Notification.
Updated auth/rule.phtml view script to use _raw for the Rules of Behavior.

--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -3,7 +3,7 @@
 </div>
 
 <div class="bd">
-    <?php echo $this->useNotification;?>
+    <?php echo $this->_raw['useNotification'];?>
         
     <p class="message">
         <?php 
