--- a/application/views/scripts/auth/rule.phtml
+++ b/application/views/scripts/auth/rule.phtml
@@ -9,7 +9,7 @@
 
 <?php Fisma_Format_Section::startSection($this->systemName . ' Rules of Behavior'); ?>
 <div>
-    <?php echo $this->behaviorRule; ?>
+    <?php echo $this->_raw['behaviorRule']; ?>
 </div>
 
 <div>
