Task on branch OFJ-564 Remove references to Fisma_Acl in view scripts
Fix defect OFC-46 from Crucible:
Change $_modelName to 'Asset'.
Correct the wrong Fisma_Acl check createAssetPrivilege.
Moved Fisma_Acl references from incident view scripts to incidentController after latest Admin merge. 
Append error handling for viewAction.

--- a/application/views/scripts/asset/view.phtml
+++ b/application/views/scripts/asset/view.phtml
@@ -1,10 +1,10 @@
 <?php
 echo $this->partial('asset/navibar.phtml', array('createAssetPrivilege' => $this->createAssetPrivilege));
 $operation = '';
-if ($this->updateAssetPrivilege) {
+if ($this->updateAssetObjPrivilege) {
     $operation .= "[<a href='{$this->editLink}'>Edit</a>]";
 }
-if ($this->deleteAssetPrivilege) {
+if ($this->deleteAssetObjPrivilege) {
     $operation .= "&nbsp;&nbsp;[<a href='{$this->deleteLink}'>Delete</a>]";
 }
 Fisma_Format_Section::startSection("Asset $operation"); ?>
