--- a/application/layouts/scripts/login.phtml
+++ b/application/layouts/scripts/login.phtml
@@ -3,7 +3,8 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
 <?php
-    echo $this->headTitle()->prepend(Fisma::configuration()->getConfig('system_name'));
+    $this->headTitle()->prepend($this->systemName);
+    echo $this->headTitle();
 
     $yuiComponents = array('yahoo', 'dom', 'event', 'element', 'container', 'button');
 
@@ -45,8 +46,8 @@
     </div>
     <div id='footer'>
         <div id='footerLinks'>
-            <a href="mailto:<?php echo Fisma::configuration()->getConfig('contact_email');?>?Subject=<?php echo 
-            urlencode(Fisma::configuration()->getConfig('contact_subject'));?>">Contact Administrator</a>&nbsp;|&nbsp;
+            <a href="mailto:<?php echo $this->_raw['contactEmail'];?>?Subject=<?php echo 
+            $this->_raw['contactSubject'];?>">Contact Administrator</a>&nbsp;|&nbsp;
             <a href="/auth/rob/">Rules of Behavior</a>&nbsp;|&nbsp;
             <a href="/auth/privacy/">Privacy Policy</a>&nbsp;|&nbsp;
             <i>Powered by <a href="http://www.openfisma.org">OpenFISMA</a></i>
