Task on branches OFJ-608 Output sanitized HTML for rich fields outputted outside a form
Created Fisma_View::safeHtml method to use HTML Purifier to do this work.
Updated system/system and system/fips view scripts to use this new method.

--- a/application/views/scripts/system/fips.phtml
+++ b/application/views/scripts/system/fips.phtml
@@ -40,13 +40,13 @@ Fisma_Format_Section::startSection('Confidentiality');
                   type="textarea" 
                   rows="4"
                   cols="80">
-                <?php echo $this->system['confidentialityDescription']; ?>&nbsp;
+                <?php echo $this->safeHtml('system.confidentialityDescription'); ?>&nbsp;
             </div>
             <?php
             } else {
             ?>
             <div>
-                <?php echo $this->system['confidentialityDescription']; ?>&nbsp;
+                <?php echo $this->safeHtml('system.confidentialityDescription'); ?>&nbsp;
             </div>
             <?php
             }
@@ -97,13 +97,13 @@ Fisma_Format_Section::startSection('Integrity');
                   type="textarea" 
                   rows="4"
                   cols="80">
-                  <?php echo $this->system['integrityDescription']; ?>&nbsp;
+                  <?php echo $this->safeHtml('system.integrityDescription'); ?>&nbsp;
             </div>
             <?php
             } else {
             ?>
             <div>
-                  <?php echo $this->system['integrityDescription']; ?>&nbsp;
+                  <?php echo $this->safeHtml('system.integrityDescription'); ?>&nbsp;
             </div>
             <?php
             }
@@ -154,13 +154,13 @@ Fisma_Format_Section::startSection('Availability');
                   type="textarea" 
                   rows="4"
                   cols="80">
-                  <?php echo $this->system['availabilityDescription']; ?>&nbsp;
+                  <?php echo $this->safeHtml('system.availabilityDescription'); ?>&nbsp;
             </div>
             <?php
             } else {
             ?>
             <div>
-                  <?php echo $this->system['availabilityDescription']; ?>&nbsp;
+                  <?php echo $this->safeHtml('system.availabilityDescription'); ?>&nbsp;
             </div>
             <?php
             }
