Task on branches OFJ-605 Output JSON from view script
Scrapped these changes, reverse merge of revisions 3238, 3246, 3250 and 3251

--- a/application/views/scripts/organization/tree.phtml
+++ b/application/views/scripts/organization/tree.phtml
@@ -27,7 +27,7 @@ YAHOO.util.Event.onDOMReady(function () {
                                     {
                                         success: function(o) {
                                             var json = YAHOO.lang.JSON.parse(o.responseText);
-                                            showTree(json);
+                                            showTree(json.treeData);
                                         },
                                         failure: function(o) {
                                             alert('Unable to load the organization tree: ' + o.statusText);
