--- a/application/views/scripts/organization/list.phtml
+++ b/application/views/scripts/organization/list.phtml
@@ -28,7 +28,7 @@ var myColumnDefs = [
     };
 
     // DataSource instance
-    var myDataSource = new YAHOO.util.DataSource("/organization/search");
+    var myDataSource = new YAHOO.util.DataSource("/panel/organization/sub/search");
     myDataSource.responseType = YAHOO.util.DataSource.TYPE_JSON;
     myDataSource.responseSchema = {
         resultsList: "table.records",
