--- a/application/views/scripts/remediation/mitigation-strategy.phtml
+++ b/application/views/scripts/remediation/mitigation-strategy.phtml
@@ -29,7 +29,7 @@
     </b>
 </p>
 <div name="finding[mitigationStrategy]" id="mitigation_strategy" type="textarea">
-    <?php echo $this->safeHtml('finding.mitigationStrategy'); ?> 
+    <?php echo $finding['mitigationStrategy']; ?> 
 </div>
 
 <p>
@@ -44,7 +44,7 @@
     </b>
 </p>
 <div name="finding[resourcesRequired]" id="resources_required" type="textarea"> 
-    <?php echo $this->safeHtml('finding.resourcesRequired'); ?> 
+    <?php echo $finding['resourcesRequired']; ?> 
 </div>
 
 <?php 
