Sub-task on branches OFJ-614 Ensure DataTable, AutoComplete, etc use JSON data correctly
Fixed list.phtml view script data table code in: system, role, asset, organization and user
Fixed ACL check throwing exception in Remediation controller
Fixed output escaping issue in incidient/incident.phtml and incident/workflow-step.phtml
Fixed view script organization/tree.phtml
Fixed library class Fisma_Form_Element_CheckboxTree.php to handle escaping of content.

--- a/application/views/scripts/asset/list.phtml
+++ b/application/views/scripts/asset/list.phtml
@@ -60,7 +60,7 @@ Fisma_Format_Section::startSection("Asset Inventory <span id='searchResultsTotal
     var myColumnDefs = [{key: 'id', label:'', formatter: checkboxList}
     <?php
     foreach ($this->columns as $k => $v) {
-        echo ',{key:"' . $k . '", label:"' . $v . '"}';
+        echo ',{key:"' . $k . '", label:"' . $v . '", formatter: "text"}';
     }
     echo ", {key: 'id', label:'View', formatter: operation}];";
     ?>
