--- a/application/views/scripts/incident/incident.phtml
+++ b/application/views/scripts/incident/incident.phtml
@@ -110,7 +110,7 @@
                          <?php
                          endif;
                          ?>>
-                        <?php echo $incident['additionalInfo']; ?>&nbsp;
+                        <?php echo $this->_raw['incident']['additionalInfo']; ?>&nbsp;
                     </div>
                 </td>
             </tr>
@@ -128,7 +128,7 @@
                          <?php
                          endif;
                          ?>>
-                        <?php echo $incident['actionsTaken']; ?>&nbsp;
+                        <?php echo $this->_raw['incident']['actionsTaken']; ?>&nbsp;
                     </div>
                 </td>
             </tr>
@@ -207,7 +207,7 @@
                          <?php
                          endif;
                          ?>>
-                        <?php echo $incident['hostAdditional']; ?>&nbsp;
+                        <?php echo $this->_raw['incident']['hostAdditional']; ?>&nbsp;
                     </div>
                 </td>
             </tr>    
@@ -229,7 +229,7 @@
                 </tr>
                 <tr>
                     <td>User:</td>
-                    <td><?php echo $incident['reportingUser']; ?></td>
+                    <td><?php echo $this->_raw['incident']['reportingUser']; ?></td>
                 </tr>
             <?php
             else:
@@ -492,7 +492,7 @@
                              <?php
                              endif;
                              ?>>
-                             <?php echo $incident['piiAdditional']; ?>&nbsp;
+                             <?php echo $this->_raw['incident']['piiAdditional']; ?>&nbsp;
                         </div>
                     </td>
                 </tr>    
@@ -698,7 +698,7 @@
                              <?php
                              endif;
                              ?>>
-                            <?php echo $incident['piiShipmentTimeline']; ?>&nbsp;
+                            <?php echo $this->_raw['incident']['piiShipmentTimeline']; ?>&nbsp;
                         </div>
                     </td>
                 </tr>    
@@ -716,7 +716,7 @@
                              <?php
                              endif;
                              ?>>
-                            <?php echo $incident['piiShipmentTrackingNumbers']; ?>&nbsp;
+                            <?php echo $this->_raw['incident']['piiShipmentTrackingNumbers']; ?>&nbsp;
                         </div>
                     </td>
                 </tr>
