--- a/application/views/scripts/organization/list.phtml
+++ b/application/views/scripts/organization/list.phtml
@@ -4,8 +4,8 @@
 // Column definitions
 var myColumnDefs = [
     {key:"id", label:"id", hidden: true}
-    ,{key:"name", label:"Organization Name", sortable: true, hidden: false}
-    ,{key:"nickname", label:"Nickname", sortable: true, hidden: false}
+    ,{key:"name", label:"Organization Name", sortable: true, hidden: false, formatter: "text"}
+    ,{key:"nickname", label:"Nickname", sortable: true, hidden: false, formatter: "text"}
     ,{key:"orgType", label:"type", sortable: true, hidden: false}
 ];
 
