--- a/application/views/scripts/ir-category/tree.phtml
+++ b/application/views/scripts/ir-category/tree.phtml
@@ -89,10 +89,13 @@ function renderTreeNodes(treeNodes, parentNode, depth) {
     for (var i in treeNodes) {
         treeNode = treeNodes[i];
         
+        nameString = treeNode.name.toString().replace(/&/g, "&#38;").replace(/</g, "&#60;").replace(/>/g, "&#62;");
         if(treeNode.category) {
-            nodeText = "<b>" + treeNode.category + "</b> - " + treeNode.name;
+            catString = treeNode.category.toString();
+            catString = catString.replace(/&/g, "&#38;").replace(/</g, "&#60;").replace(/>/g, "&#62;");
+            nodeText = "<b>" + catString + "</b> - " + nameString;
         } else {
-            nodeText = treeNode.name;
+            nodeText = nameString;
         }
         var yuiNode = new YAHOO.widget.TextNode(nodeText, parentNode, false);
         
