OFJ-303 Convert flash charts and graphs to a standard technology (PNG, SVG, or canvas)
Placed in new javascript lib for canvas based charts (jqPlot).
Created a javascript wrapper for jqPlot bar, stacked-bar, and pie charts.
Implemented a new php class called Fisma_ChartJQP (php wrapper) which hands data to the javascript wrapper.
Added json context switches to DashboardController.php (for use as a remote data source for the charts on the main page).
Changed the structure of outputed data from the totalstatusAction() and totaltypeAction() to match that of what the new charts expect.

--- a/application/modules/default/views/scripts/dashboard/index.phtml
+++ b/application/modules/default/views/scripts/dashboard/index.phtml
@@ -104,7 +104,7 @@ if ( !empty( $this->alert['TOTAL'] ) ) {
 ?>
     <div class="panel clear">
         <table width="100%">
-            <tr><td colspan="2"><b>&nbsp;&nbsp;&nbsp;Management Overview </b></td></tr>
+            <tr><td colspan="2"><b>&nbsp;&nbsp;&nbsp;Management Overview </b><br/><br/> </td></tr>
             <tr>
                 <td align="center">
                 <?php echo $this->escape($this->statusChart, 'none'); ?>
@@ -112,10 +112,6 @@ if ( !empty( $this->alert['TOTAL'] ) ) {
                 <td align="center">
                 <?php echo $this->escape($this->typeChart, 'none'); ?>
                 </td>
-            </tr>
-            <tr>
-                <td align="center"><b>Finding Status<br>Distribution</b></td>
-                <td align="center"><b>Mitigation Strategy<br>Distribution</b></td>
             </tr>
         </table>
     </div>
