OFJ-303 Convert flash charts and graphs to a standard technology (PNG, SVG, or canvas)
The Chart wrapper will now make a uniqueid for itself if one is not supplied to it (no longer a required argument).
Added alignment option to the chart wrapper.
Changed the data output structure of http://localhost/security-control-chart/control-deficiencies/format/json
Replaced the chart on the Findings dashboard with the new chart implementation

--- a/application/modules/default/views/scripts/chart/chartJQP.phtml
+++ b/application/modules/default/views/scripts/chart/chartJQP.phtml
@@ -1,14 +1,18 @@
 
 <?php /* the div for jqPlot to use (the JavaScript will create canvases in this */ ?>
-<div name="<?php
-        echo $this->escape($this->chartData['uniqueid'], 'none'); 
-    ?>" id="<?php
-        echo $this->escape($this->chartData['uniqueid'], 'none');
-    ?>" style="width:<?php
-                        echo $this->escape($this->chartData['width'], 'none');
-    ?>px; height:<?php 
-                        echo $this->escape($this->chartData['height'], 'none'); 
-    ?>px;">
+
+<div <?php echo $this->escape($this->divContainerArgs, 'none');  ?> >
+
+            <div name="<?php
+                    echo $this->escape($this->chartData['uniqueid'], 'none'); 
+                ?>" id="<?php
+                    echo $this->escape($this->chartData['uniqueid'], 'none');
+                ?>" style="width:<?php
+                                    echo $this->escape($this->chartData['width'], 'none');
+                ?>px; height:<?php 
+                                    echo $this->escape($this->chartData['height'], 'none'); 
+                ?>px;">
+            </div>
 </div>
 
 <?php /* call javascript:createChartJQChart(obj) defined in jqplotWrapper.js which will create the chart */ ?>
